# KodiakFS

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  go.sum  graybox_test.go  llgfs.go  rebar.config
clientcli/: CMakeLists.txt
cmd/: master.go  root.go
doc/: Ideas.org  filesystem_spec.org
metaserver/: CMakeLists.txt  Cargo.toml  main.cpp  sqlhandler.cpp  sqlhandler.h
src/: kodiakfs.app.src  kodiakfs_app.erl  utilities.erl
src/gfs/chunkserver/: chunkserver.go  download_buffer.go
src/gfs/client/: client.go  leasebuffer.go
src/gfs/master/: chunk_manager.go  chunkserver_manager.go  master.go  namespace_manager.go
src/gfs/util/: util.go
src/terasort/: master.go  worker.go
tests/: CMakeLists.txt  compile_flags.txt  main.cpp
tests/cmake/: FindErlang.cmake
